Fix landscape learn more button out of bounds

--- a/src/style/06_components/_hero.scss
+++ b/src/style/06_components/_hero.scss
@@ -4,7 +4,8 @@
   background: no-repeat center/100% url('../assets/cfischer_header.jpg');
   // background-position-x: 0px;
   background-size: cover;
-  height: 100vh;
+  display: block;
+  min-height: 100vh;
 
   &__graylayer {
     background-image: linear-gradient(90deg, rgba(50,60,65,0.5), rgba(50,60,65,0));
@@ -40,7 +41,7 @@
   &__container {
     margin: 0 auto 0 250px;
     max-width: 350px;
-    height: 100%;
+    min-height: 100vh;
     color: $color6;
     display: flex;
     flex-flow: column;
